# NexuML

./: .dockerignore  .gitignore  CNAME  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.agents/skills/autoresearch/: SKILL.md
.devcontainer/: devcontainer.env  devcontainer.json  hostname.env  postCreateCommand.sh
.github/: release.yml
.github/workflows/: ci.yml  docs.yml  release.yml
.k8s/: pytorchjob.yaml
.k8s/scenarios/: job_audioset.yaml  pytorchjob_audioset.yaml
configs/: .gitkeep
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/development/: index.html
dev/development/install/: index.html
dev/explanation/: index.html
dev/explanation/architecture/: index.html
dev/explanation/diagrams/: index.html
dev/explanation/library-discovery/: index.html
dev/explanation/tensordict/: index.html
dev/how-to/: index.html
dev/how-to/auto-batch-size/: index.html
dev/how-to/autoresearch/: index.html
dev/how-to/checkpoints/: index.html
dev/how-to/cli-lifecycle/: index.html
dev/how-to/custom-data-source/: index.html
dev/how-to/custom-eval-algorithm/: index.html
dev/how-to/custom-layer/: index.html
dev/how-to/custom-library/: index.html
dev/how-to/custom-scenario/: index.html
dev/how-to/define-scenario/: index.html
dev/how-to/deploy/: index.html
dev/how-to/development/: index.html
dev/how-to/evaluate/: index.html
dev/how-to/export/: index.html
dev/how-to/export-dataset/: index.html
dev/how-to/github-pages/: index.html
dev/how-to/library-cli/: index.html
dev/how-to/register-library/: index.html
dev/how-to/run-scenarios/: index.html
dev/how-to/scenario-file/: index.html
dev/how-to/tracking/: index.html
dev/how-to/train/: index.html
dev/how-to/tune/: index.html
dev/learn/: index.html
dev/learn/cifar-resnet-walkthrough/: index.html
dev/learn/decorators-and-discovery/: index.html
dev/reference/: index.html
dev/search/: search_index.json
dev/start/: index.html
docs/: index.md
docs/development/: index.md  install.md
docs/explanation/: architecture.md  diagrams.md  index.md  library-discovery.md  tensordict.md
docs/how-to/: auto-batch-size.md  autoresearch.md  checkpoints.md  cli-lifecycle.md  custom-data-source.md  custom-eval-algorithm.md  custom-layer.md  custom-library.md  custom-scenario.md  define-scenario.md  deploy.md  development.md  evaluate.md  export-dataset.md  export.md  github-pages.md  index.md  library-cli.md  register-library.md  run-scenarios.md  scenario-file.md  tracking.md  train.md  tune.md
docs/learn/: cifar-resnet-walkthrough.md  decorators-and-discovery.md  from-lightning.md  index.md  mental-model.md  scenarios.md
docs/reference/: backends.md  cli.md  decorators.md  environment.md  index.md  registry.md  scenario-spec.md  tuning-file.md
docs/start/: index.md  install.md  train-cifar-resnet.md
scripts/: gen_ref_pages.py
src/nexuml/: __init__.py  __main__.py
tests/: conftest.py
tests/_registry/: conftest.py  test_backend_contract.py  test_data_source_contract.py  test_eval_algorithm_contract.py  test_layer_contract.py  test_meta_registry_coverage.py  test_scenario_contract.py
tests/cli/: test_overrides.py
tests/core/: test_backends.py  test_base_layer.py  test_cli.py  test_compiler.py  test_data_loaders.py  test_diagram.py  test_discovery.py  test_export.py  test_import_coverage.py  test_provenance.py  test_registry.py  test_scenario_loader.py  test_session.py  test_storage.py
tests/data/: test_real_datasets.py  test_smoke_scenarios.py
tests/evaluation/: test_evaluation_storage.py  test_utils.py
tests/tracking/: test_logger.py
tests/training/: test_callbacks.py
tests/tuning/: test_optuna_tuner.py
v0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.1.0/development/: index.html
v0.1.0/explanation/: index.html
v0.1.0/how-to/: index.html
v0.1.0/learn/: index.html
v0.1.0/reference/: index.html
v0.1.0/start/: index.html
v0.1.0/stylesheets/: extra.css
(+361 files in other folders)
